[gd_scene load_steps=11 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://player/Sprites/Player.png" type="Texture" id=2]
[ext_resource path="res://data/player_stats/Cow.tres" type="Resource" id=3]
[ext_resource path="res://data/player_stats/Water.tres" type="Resource" id=4]
[ext_resource path="res://data/player_stats/Nugget.tres" type="Resource" id=5]
[ext_resource path="res://nugget/Nugget.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=5]
height = 80.1096

[sub_resource type="Animation" id=2]
resource_name = "WalkLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -38, 24 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "WalkRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 38, 24 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 13.0
height = 8.0

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 8
script = ExtResource( 1 )
cows = ExtResource( 3 )
nuggets = ExtResource( 5 )
water = ExtResource( 4 )
nugget_scene = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.70811, 25.3027 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/WalkLeft = SubResource( 2 )
anims/WalkRight = SubResource( 3 )

[node name="PlayerArea" type="Area2D" parent="."]
position = Vector2( -38, 24 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = -60.0
margin_top = -75.0
margin_right = 8.0
margin_bottom = -61.0
text = "Nuggets: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = -60.0
margin_top = -60.0
margin_right = 8.0
margin_bottom = -46.0
text = "Cows: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = -60.0
margin_top = -46.0
margin_right = -20.0
margin_bottom = -32.0
text = "Water: 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterConsumption" type="Timer" parent="."]

[connection signal="timeout" from="WaterConsumption" to="." method="_on_WaterConsumption_timeout"]
